# core-messages

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  conanfile.py
include/: board_status.h
messages/: board_status.proto  layer.proto
src/: board_status.cpp
